# hospital-api

./: .gitignore  CHANGELOG.md  LICENSE  hospital-api.cabal
app/: Main.hs
frontend/: package-lock.json
frontend/src/: App.jsx
