cabal-version:      3.14
name:               hospital-api
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Fernando Gomes Pinto
maintainer:         fpinto@inf.puc-rio.br
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable hospital-api
    import:           warnings
    main-is:          Main.hs

    build-depends:
          base ^>=4.18.3.0
        , servant
        , servant-server
        , warp
        , aeson
        , text

    hs-source-dirs:   app
    default-language: GHC2021
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N